@@ -29,6 +29,7 @@
 #include "ipv6-header.h"
 #include "ipv6-interface-address.h"
 #include "ipv6.h"
+#include "ns3/output-stream-wrapper.h"
 
 namespace ns3 {
 
@@ -171,6 +172,13 @@ public:
    * \param ipv6 the ipv6 object this routing protocol is being associated with
    */
   virtual void SetIpv6 (Ptr<Ipv6> ipv6) = 0;
+
+  /**
+   * \brief Print the Routing Table entries
+   *
+   * \param stream the ostream the Routing table is printed to
+   */
+  virtual void PrintRoutingTable (Ptr<OutputStreamWrapper> stream) const = 0;
 };
 
 } // namespace ns3
